--- a/.firebaserc
+++ b/.firebaserc
@@ -2,7 +2,7 @@
   "targets": {
     "mockup-front-60428": {
       "hosting": {
-        "mockup-front": [
+        "login-social-front": [
           "mockup-front-60428"
         ]
       }
