--- a/.firebaserc
+++ b/.firebaserc
@@ -1,9 +1,12 @@
 {
+  "projects": {
+    "default": "mockup-front-d33b6"
+  },
   "targets": {
-    "mockup-front-60428": {
+    "mockup-front-d33b6": {
       "hosting": {
-        "login-social-front": [
-          "mockup-front-60428"
+        "mockup-front": [
+          "mockup-front-d33b6"
         ]
       }
     }
